# gh-youtube_downloader

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/downloader/: main.py
